--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,58 +1,105 @@
-
-
 <style>
-  .search-btn {
-    background-color: #fe424d;
-    color: white;
-    border-radius: 25px;
-    padding: 0 1rem 0 1rem;
-    
+  .navbar {
+    background-color: #fff;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 0.8rem 2rem;
+  }
+
+  .navbar-brand i {
+    font-size: 1.8rem;
+    color: #fe424d;
+  }
+
+  .navbar-nav .nav-link {
+    font-size: 1.1rem;
+    font-weight: 500;
+    color: #333;
+    margin: 0 10px;
+    transition: color 0.3s ease-in-out;
+  }
+
+  .navbar-nav .nav-link:hover {
+    color: #fe424d;
+  }
+
+  .search-container {
+    position: relative;
+    display: flex;
+    align-items: center;
   }
 
   .search-inp {
     border-radius: 25px;
-    padding: 0.5rem 3rem 0.5rem 3rem;
+    padding: 0.5rem 1.5rem;
+    padding-left: 2.5rem; /* Space for icon */
+    border: 1px solid #ccc;
+    background: #f8f9fa;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   }
 
+  .search-icon {
+    position: absolute;
+    left: 12px;
+    color: #666;
+    font-size: 1rem;
+  }
+
+  .search-btn {
+    background-color: #fe424d;
+    color: white;
+    border-radius: 25px;
+    padding: 0.5rem 1rem;
+    font-weight: bold;
+    border: none;
+    transition: background 0.3s ease-in-out;
+  }
+
+  .search-btn:hover {
+    background-color: #d63842;
+  }
+
+  .nav-link b {
+    color: #fe424d;
+    transition: color 0.3s ease-in-out;
+  }
+
+  .nav-link b:hover {
+    color: #d63842;
+  }
 </style>
 
-<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
+<nav class="navbar navbar-expand-md sticky-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/listings">
+      <i class="fa-regular fa-compass"></i>
+    </a>
 
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <button class="navbar-toggler" 
-              type="button" 
-              data-bs-toggle="collapse" 
-              data-bs-target="#navbarNavAltMarkup" >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" href="/listings"><i>Explore</i></a>
+        <a class="nav-link" href="/listings/new"><i>Create New Listing</i></a>
+      </div>
 
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" href="/listings"><i>Explore</i></a>
-          <a class="nav-link" href="/listings/new"><i>WanderLust Listing</i></a>
-        </div>
+      <div class="navbar-nav ms-auto">
+        <form class="d-flex search-container" role="search">
+          <i class="fa fa-search search-icon"></i>
+          <input class="form-control search-inp" type="search" placeholder="Search Destinations">
+          <button class="btn search-btn ms-2" type="submit">Search</button>
+        </form>
+      </div> 
 
-        <div class="navbar-nav ms-auto">
-          <form class="d-flex" role="search">
-            <input class="form-control me-3 search-inp" type="search" 
-                   placeholder="Search Destinations">
-            <button class=" search-btn" type="submit">Search</button>
-          </form>
-        </div> 
-
-
-        <div class="navbar-nav ms-auto">
-
-          <% if(!currUser) { %>  
-          <a class="nav-link"  href="/signup"><b>Sign up</b></a>
+      <div class="navbar-nav ms-auto">
+        <% if(!currUser) { %>  
+          <a class="nav-link" href="/signup"><b>Sign up</b></a>
           <a class="nav-link" href="/login"><b>Log in</b></a>
-          <% } %> <% if(currUser) { %>
+        <% } else { %>
           <a class="nav-link" href="/logout">Log out</a>
-          <% } %>
-        </div>
-
+        <% } %>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
