--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -2,10 +2,12 @@
 <% layout("/layouts/boilerplate")%>
 
 
-  <div class="row mt-3 newform">
-    <div class="col-8 offset-2 " id="all" >
+  <div class="row mt-3 newform"  >
+  
+    <div class="col-8 offset-2"style="background-color: #f0f0f0; padding: 20px; border-radius: 5px;" id="all">
+
       <br>
-      <h3>Create a New Listing</h3><br>
+      <h3 >Create a New Listing</h3><br>
 
       <form method="POST" action="/listings" 
             novalidate class="needs-validation" enctype="multipart/form-data"> 
